--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,2 @@
-<p>home works!</p>
+<h1>Aqui pode ficar a pagina inicial de vocês =D</h1>
+<p>Caso a página do CMS não funcione, tente em outro navegador (Edge, Firefox ou Chrome)</p>
