--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,9 +7,16 @@ ul {
 li {
     display: inline;
     margin-right: 1em;
+    height: 5px;
 }
 
 a {
     text-decoration: none;
     color: black;
+    padding: 5px;
+}
+
+.active {
+    background-color: rgba(249, 77, 24, 0.2);
+    border-radius: 5px;
 }
