--- a/src/app/blog/blog-post/blog-post.component.html
+++ b/src/app/blog/blog-post/blog-post.component.html
@@ -1,4 +1,5 @@
 <!-- This is where Scully will inject the static HTML -->
 <article>
+    <h2>Post</h2>
     <scully-content></scully-content>
 </article>
